@@ -1,3 +1,8 @@
+2009-06-17  Thomas Heller  <theller@python.net>
+
+	* Add the comtypes.IServiceProvider interface.  Based on a patch
+	from Michael Curran.
+
 2009-04-30  Thomas Heller  <theller@python.net>
 
 	* Change version number in repository to 0.6.0.2dev.
